testing with two osds; adding osd pool creation

--- a/ceph.conf.template
+++ b/ceph.conf.template
@@ -5,3 +5,8 @@ mon host = ${PEER_MONITOR_HOST}
 auth cluster required = none
 auth service required = none
 auth client required = none
+osd journal size = ${OSD_JOURNAL_SIZE}
+osd pool default size = ${OSD_POOL_DEFAULT_SIZE}  # Write an object n times.
+osd pool default min size = ${OSD_POOL_DEFAULT_MIN_SIZE} # Allow writing n copies in a degraded state.
+osd pool default pg num = ${OSD_POOL_DEFAULT_PG_NUM}
+osd crush chooseleaf type = ${OSD_CRUSH_CHOOSELEAF_TYPE}
