--- a/ceph.conf.template
+++ b/ceph.conf.template
@@ -2,9 +2,9 @@
 mon host = ${PEER_MONITOR_HOST}
 # public network = {network}[, {network}]
 # cluster network = {network}[, {network}]
-auth cluster required = none
-auth service required = none
-auth client required = none
+auth cluster required = cephx
+auth service required = cephx
+auth client required = cephx
 osd journal size = ${OSD_JOURNAL_SIZE}
 osd pool default size = ${OSD_POOL_DEFAULT_SIZE}  # Write an object n times.
 osd pool default min size = ${OSD_POOL_DEFAULT_MIN_SIZE} # Allow writing n copies in a degraded state.
