updating location env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,8 +45,7 @@ services:
       - OSD_EXT4_SUPPORT=true
       - OSD_JOURNAL_SIZE=512
       - ETCD_URL=http://${HOST_IP}:12379
-      - OSD_CRUSH_HOST=osd1
-      - OSD_CRUSH_RACK=rack1
+      - OSD_CRUSH_LOCATION=root=default rack=rack1 host=osd1host
       # - OSD_PUBLIC_IP=${HOST_IP}
       # - OSD_CLUSTER_IP=${HOST_IP}
 
@@ -59,8 +58,7 @@ services:
       - OSD_EXT4_SUPPORT=true
       - OSD_JOURNAL_SIZE=512
       - ETCD_URL=http://${HOST_IP}:12379
-      - OSD_CRUSH_HOST=osd2
-      - OSD_CRUSH_RACK=rack2
+      - OSD_CRUSH_LOCATION=root=default rack=rack1 host=osd2host
 
   osd3:
     build: .
@@ -71,5 +69,4 @@ services:
       - OSD_EXT4_SUPPORT=true
       - OSD_JOURNAL_SIZE=512
       - ETCD_URL=http://${HOST_IP}:12379
-      - OSD_CRUSH_HOST=osd3
-      - OSD_CRUSH_RACK=rack3
+      - OSD_CRUSH_LOCATION=root=default rack=rack2 host=osd3host
