--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.5'
 services:
 
   etcd0:
-    image: quay.io/coreos/etcd
+    image: quay.io/coreos/etcd:v3.2.25
     network_mode: host
     environment:
       - ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:12379
@@ -12,6 +12,7 @@ services:
   mon1:
     image: flaviostutz/ceph-monitor
     network_mode: host
+    pid: host
     environment:
       - LOG_LEVEL=0
       - CREATE_CLUSTER=true
@@ -23,6 +24,7 @@ services:
   mon2:
     image: flaviostutz/ceph-monitor
     network_mode: host
+    pid: host
     environment:
       - ETCD_URL=http://${HOST_IP}:12379
       - PEER_MONITOR_HOSTS=${HOST_IP}:16789,${HOST_IP}:36789
